--- a/public/locales/am/common.json
+++ b/public/locales/am/common.json
@@ -1,8 +1,31 @@
 {
   "hero": {
-    "title": "የኢትዮጵያን ብቃት ያለው ሰው ኃይል ከአለም አቀፍ እድሎች ጋር ማገናኘት",
-    "description": "ዋሊፍ ኢትዮጵያ አገልጋዮች በተረጋገጠ የሰው ኃይል አውታረመረብ በኩል የበለጠ ብቃት ያላቸውን ባለሙያዎች ከዓለም አቀፍ ሰራተኞች ጋር የሚያገናኝ ነው።",
-    "agent_login": "የአገልጋይ መግቢያ",
-    "our_process": "የእኛ ሂደት"
+    "title": "ዘመናዊ የድር መተግበሪያዎች የሚያስፈልጋቸውን የተጠቃሚ ሚና እና ፈቃድ አስተዳደር ዳሽቦርድ",
+    "description": "በ Next.js የተሰራው ይህ ዳሽቦርድ ተጠቃሚዎችን፣ ሚናዎችን እና ፈቃዶችን በቀላሉ እንዲያስተዳድሩ ያስችልዎታል። ተነባቢነት፣ ፍጥነት እና መስፋፋት ለማስተዳደር የተቀየሰ ነው።",
+    "cta": {
+      "primary": "ጀምር",
+      "secondary": "ተጨማሪ ያንብቡ"
+    }
+  },
+  "link": {
+    "hero": "መግቢያ",
+    "features": "አገልግሎቶች",
+    "testimonials": "የተሳካ ታሪኮች",
+    "about": "ስለ እኛ",
+    "contact": "አግኙን"
+  },
+  "button": {
+    "login": "ግባ",
+    "logout": "ውጣ",
+    "register": "መመዝገብ",
+    "save": "አስቀምጥ",
+    "cancel": "ሰርዝ",
+    "delete": "ደሌዝ",
+    "edit": "አርትዕ",
+    "update": "አስተካክል",
+    "create": "ፍጠር",
+    "view": "እይ",
+    "search": "ፈልግ",
+    "submit": "ላክ"
   }
 }
