--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -1,8 +1,31 @@
 {
   "hero": {
-    "title": "ربط المواهب الإثيوبية بالفرص العالمية",
-    "description": "تمكن واليف إثيوبيا الوكلاء من مطابقة المحترفين المهرة مع أصحاب العمل الدوليين من خلال شبكة المرشحين الموثوقة لدينا.",
-    "agent_login": "تسجيل دخول الوكيل",
-    "our_process": "عملنا"
+    "title": "لوحة تحكم RBAC آمنة وديناميكية لتطبيقات الويب الحديثة",
+    "description": "قم بإدارة المستخدمين والأدوار والصلاحيات بسهولة مع لوحة التحكم المبنية على Next.js - مصممة لتكون مرنة وسريعة وقابلة للتوسع.",
+    "cta": {
+      "primary": "ابدأ الآن",
+      "secondary": "تعرف أكثر"
+    }
+  },
+  "link": {
+    "hero": "الرئيسية",
+    "features": "الخدمات",
+    "testimonials": "قصص النجاح",
+    "about": "معلومات عنا",
+    "contact": "اتصل بنا"
+  },
+  "button": {
+    "login": "تسجيل الدخول",
+    "logout": "تسجيل الخروج",
+    "register": "تسجيل",
+    "save": "حفظ",
+    "cancel": "إلغاء",
+    "delete": "حذف",
+    "edit": "تعديل",
+    "update": "تحديث",
+    "create": "إنشاء",
+    "view": "عرض",
+    "search": "بحث",
+    "submit": "إرسال"
   }
 }
